WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
63561
DFG JIT - don't always assume integer in relational compare
https://bugs.webkit.org/show_bug.cgi?id=63561
Summary
DFG JIT - don't always assume integer in relational compare
Gavin Barraclough
Reported
2011-06-28 13:58:33 PDT
If neither operand is known integer, or either is in double representation, then at least use a function call (don't bail off the speculative path).
Attachments
The patch
(5.08 KB, patch)
2011-06-28 13:59 PDT
,
Gavin Barraclough
oliver
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Gavin Barraclough
Comment 1
2011-06-28 13:59:35 PDT
Created
attachment 98968
[details]
The patch
Gavin Barraclough
Comment 2
2011-06-28 14:07:06 PDT
Fixed in
r89957
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug