https://bugs.webkit.org/show_bug.cgi?id=63561 DFG JIT - don't always assume integer in relational compare

Reviewed by Oliver Hunt.

If neither operand is known integer, or either is in double representation,
then at least use a function call (don't bail off the speculative path).

* dfg/DFGSpeculativeJIT.cpp:
(JSC::DFG::SpeculativeJIT::compilePeepHoleCall):
(JSC::DFG::SpeculativeJIT::compile):
* dfg/DFGSpeculativeJIT.h:
(JSC::DFG::SpeculativeJIT::isDataFormatDouble):
(JSC::DFG::SpeculativeJIT::compareIsInteger):



Canonical link: https://commits.webkit.org/79243@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@89957 268f45cc-cd09-0410-ab3c-d52691b4dbfc